Fix scss files to merge overlap code
 - 버튼을 믹스인으로 묶었습니다.

--- a/src/styles/Explore.scss
+++ b/src/styles/Explore.scss
@@ -1,7 +1,6 @@
+@import './common/normal-button.scss';
+
 #search {
-  // background-color: rgb(228, 228, 228);
-  // height: 100vh;
-  // margin-bottom: 300px;
   #search-form {
     display: grid;
     grid-auto-flow: column;
@@ -14,26 +13,7 @@
       padding: 10px;
       border: 0px;
     }
-    button {
-      cursor: pointer;
-      font-size: 1.4rem;
-      background-color: whitesmoke;
-      border: 0px;
-      svg {
-        transition-property: color;
-        transition-duration: 200ms;
-      }
-    }
-    button:hover {
-      svg {
-        color: black;
-      }
-    }
-    button:active {
-      svg {
-        color: rgb(236, 236, 236);
-      }
-    }
+    @include normal-button;
   }
 
   .search-list {
@@ -45,7 +25,6 @@
     li {
       position: relative;
       overflow: visible;
-      // border: solid 4px black;
       display: grid;
       gap: 10px;
       grid-auto-flow: column;
@@ -56,33 +35,13 @@
       .search-image {
         img {
           display: block;
-          // border-radius: 5px;
           width: 5rem;
         }
       }
       p {
         margin: 0;
       }
-      button {
-        cursor: pointer;
-        font-size: 1.4rem;
-        background-color: rgba(0, 0, 0, 0);
-        border: white solid 0px;
-        svg {
-          transition-property: color;
-          transition-duration: 200ms;
-        }
-      }
-      button:hover {
-        svg {
-          color: black;
-        }
-      }
-      button:active {
-        svg {
-          color: rgb(236, 236, 236);
-        }
-      }
+      @include normal-button;
       .search-drop-down-menu {
         z-index: 4;
         display: block;
